--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <div class="s1main">
             <div>
             <p style="font-size: 0.7cm;color: rgb(54, 47, 47);" class="s1p1">
-            <i>ANUSHA PILLA </i>
+            <i>ANUSHA RAO </i>
             </p>  
           
             <p style="text-align: center;font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;color: rgb(54, 47, 47);;font-weight: bolder;" ><i>INSTRUCTOR</p>
