--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <p style="font-size: 0.7cm;color: rgb(54, 47, 47);" class="s1p1">
             <i>ANUSHA RAO </i>
             </p>  
-          <p style="text-align: center;font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;color: rgb(54, 47, 47);;font-weight: bolder;" ><i>INSTRUCTOR</p>
+          <p style="text-align: center;font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;color: rgb(54, 47, 47);;font-weight: bolder;" ><i>DEVELOPER AND INSTRUCTOR</p>
         </div>     
           </div>
           <div class="b1">
