--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
           <div class="s2p2">
             <ul>
               <a href="https://snack.expo.dev/@sanusha/dynamic-timetable-real">Dynamic TimeTable</a><p>---(Time Table designed using React Native with Google API of worksheets)</p>
-              <a href="https://github.com/ANUSHAPILLA/Set-your-Goals" >Simple React Project</a>
-                <a href="https://github.com/ANUSHAPILLA/videochatapp">Video chat app using javascript</a>
-                <a href="https://github.com/ANUSHAPILLA/SRIKAR-PROJECT">React Native project to upload the favourite music</a>
-         <a href="https://github.com/ANUSHAPILLA">GitHub Profile</a>
+              <a href="https://github.com/ANUSHAPILLA/Set-your-Goals" >Simple React Project</a><br>
+                <a href="https://github.com/ANUSHAPILLA/videochatapp">Video chat app using javascript</a><br>
+                <a href="https://github.com/ANUSHAPILLA/SRIKAR-PROJECT">React Native project to upload the favourite music</a><br>
+         <a href="https://github.com/ANUSHAPILLA">GitHub Profile</a><br>
             </ul>
           </div>    
         </div>       
